# StandLight_Distance_Temp_Humid_Motor

./: CMakeLists.txt  README.md
src/: main.cpp
src/app/Controller/: controller.cpp  controller.h
src/app/Listener/: Listener.cpp  Listener.h
src/app/View/: ClockView.cpp  ClockView.h  TempHumidView.cpp  TempHumidView.h  View.cpp  View.h
src/app/service/: ClockService.cpp  ClockService.h  Service.cpp  Service.h  TempHumidService.cpp  TempHumidService.h  lightState.h
src/hw/Button/: Button.h
src/hw/Clock/: clock.cpp  clock.h
src/hw/ClockCheck/: ClockCheck.cpp  ClockCheck.h
src/hw/DHT11/: DHT11.h
src/hw/Led/: Led.cpp
src/hw/boot/: config-5.15.0-1013-raspi  initrd.img  initrd.img.old  vmlinuz  vmlinuz.old
src/hw/boot/firmware/: boot.scr  boot.scr.bak  network-config
sw_design/: sw_design.drawio
